webアプリ用設定

--- a/src/pug/_modules/_mixin.pug
+++ b/src/pug/_modules/_mixin.pug
@@ -1,5 +1,5 @@
 mixin head(data)
-  link(rel="dns-prefetch", href="//code-climber.jp")
+  link(rel="dns-prefetch", href="")
   meta(charset="utf-8")
   meta(http-equiv="x-ua-compatible", content="ie=edge")
   meta(name="description", content=data.head.description)
