--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -2,8 +2,8 @@
 // ↓ 下記、必要に合わせて作成してください
 // @import "_base"
 // @import "_variable"
-// @import "_mixin"
-// @import "layout/*"
+@import "_mixin"
+@import "layout/*"
 @import "_modules/*"
 @import "page/*"
 @import "page/*/*"
